Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48389

WinRT: FileDialog not showing up on Win10

    XMLWordPrintable

Details

    • WinRT
    • 566399937ba3d17df12aa0cd8e7fe79bb0005b16

    Description

      On Windows 10 using the standarddialogs example no window is shown when I click on any of the file Dialogs.

      Instead the application completely hangs, probably some XAML thread issues.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes