winrt: Fix filedialog show on Windows 10

The file picker must be used inside the Xaml thread, otherwise execution
will fail without giving any warning or error.

Task-number: QTBUG-48389
Change-Id: I917e88e95993da04be3d7cd34344ffd68ee71cdd
Reviewed-by: Samuel Nevala <samuel.nevala@intopalo.com>
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>